# navigation2_dynamic

detection_2d_lidar/: CMakeLists.txt  package.xml  setup.cfg  setup.py
detection_2d_lidar/detection_2d_lidar/: detection_2d_lidar_node.py
detection_2d_lidar/include/detection_2d_lidar/: detection_2d_lidar.hpp  detection_2d_lidar_node.hpp
detection_2d_lidar/rviz/: test_view.rviz
detection_2d_lidar/src/: detection_2d_lidar.cpp  detection_2d_lidar_node.cpp  main.cpp
